--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,3 +1,5 @@
+@import 'layout';
+
 .clearfix {
   &:before {
     content: " ";
@@ -18,6 +20,8 @@ body, ul, menu, dir, p {
 
 body {
   margin: 5px;
+  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
 }
 
 ul {
@@ -30,166 +34,6 @@ ul {
 
 .right {
   float: right;
-}
-
-.span-10 {
-  width: 9%;
-}
-
-.gutter-10 {
-  margin-right: 9%;
-}
-
-.span-1 {
-  width: 0;
-}
-
-.gutter-1 {
-  margin-right: 0;
-}
-
-.span-20, .main-nav li {
-  width: 19%;
-}
-
-.gutter-20 {
-  margin-right: 19%;
-}
-
-.span-2 {
-  width: 1%;
-}
-
-.gutter-2 {
-  margin-right: 1%;
-}
-
-.span-30 {
-  width: 29%;
-}
-
-.gutter-30 {
-  margin-right: 29%;
-}
-
-.span-3 {
-  width: 2%;
-}
-
-.gutter-3 {
-  margin-right: 2%;
-}
-
-.span-40 {
-  width: 39%;
-}
-
-.gutter-40 {
-  margin-right: 39%;
-}
-
-.span-4 {
-  width: 3%;
-}
-
-.gutter-4 {
-  margin-right: 3%;
-}
-
-.span-50 {
-  width: 49%;
-}
-
-.gutter-50 {
-  margin-right: 49%;
-}
-
-.span-5 {
-  width: 4%;
-}
-
-.gutter-5 {
-  margin-right: 4%;
-}
-
-.span-60 {
-  width: 59%;
-}
-
-.gutter-60 {
-  margin-right: 59%;
-}
-
-.span-6 {
-  width: 5%;
-}
-
-.gutter-6 {
-  margin-right: 5%;
-}
-
-.span-70 {
-  width: 69%;
-}
-
-.gutter-70 {
-  margin-right: 69%;
-}
-
-.span-7 {
-  width: 6%;
-}
-
-.gutter-7 {
-  margin-right: 6%;
-}
-
-.span-80 {
-  width: 79%;
-}
-
-.gutter-80 {
-  margin-right: 79%;
-}
-
-.span-8 {
-  width: 7%;
-}
-
-.gutter-8 {
-  margin-right: 7%;
-}
-
-.span-90 {
-  width: 89%;
-}
-
-.gutter-90 {
-  margin-right: 89%;
-}
-
-.span-9 {
-  width: 8%;
-}
-
-.gutter-9 {
-  margin-right: 8%;
-}
-
-.span-100 {
-  width: 99%;
-}
-
-.gutter-100 {
-  margin-right: 99%;
-}
-
-.span-10 {
-  width: 9%;
-}
-
-.gutter-10 {
-  margin-right: 9%;
 }
 
 .main-content {
@@ -205,7 +49,7 @@ ul {
 }
 
 .limelink {
-  color: #a82400;
+  color: #39c; // #a82400;
   font-style: italic;
 }
 
@@ -254,9 +98,13 @@ ul {
 }
 
 .main-nav li {
-  font-size: 1.5em;
+  @extend .span-20;
+
+  // font-size: 1.5em;
   text-align: center;
   position: relative;
+  border-bottom: 1px solid #DDD;
+
   &::after {
     position: absolute;
     content: '..';
@@ -268,12 +116,13 @@ ul {
 }
 
 body {
-  color: #555;
+  color: #777; // #BFC3C3;
   line-height: 2em;
 }
 
 span.imp {
-  font-weight: 700;
+  // font-weight: 700;
+  color: #444;
 }
 
 .nav-header, .main-nav li {
@@ -467,8 +316,13 @@ section {
   &:last-child {
     border-bottom: 2px solid transparent;
   }
-  h2 {
-    color: #1884bb;
+  
+  .heading {
+    color: #494E49; // #1884bb;
+  }
+
+  .sub-heading{
+    color: #666;
   }
 }
 
